--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -43,7 +43,7 @@ iframe {
 
 .card {
   min-height: 300px;
-
+  text-align: center;
   border: 2px solid #ffb74d;
   background-color: #333;
   color: #eee;
